data/all_generated_tests/raw_wast_tests/unreachable_InfiniteLoops_1175.wast
;; 6. **Test Description:**    - Embed `unreachable` within a `loop` that checks a variable and performs a `br` if a certain condition is met. The loop should trap if the condition check fails.    - Constraint: Ensures `unreachable` interrupts the loop as expected.    - Infinite Loop Relation: Tests that the loop does not execute repeatedly due to conditional trapping.

(assert_invalid
  (module (func $loop-with-unreachable-and-br-if (result i32)
    (local i32)
    (local.set 0 (i32.const 0))
    (loop (result i32)
      (local.get 0)
      (i32.const 5)
      (i32.eq)
      (br_if 0 (local.get 0))
      (unreachable)
      (local.set 0 (i32.add (local.get 0) (i32.const 1)))
    )
  ))
  "type mismatch"
)